tests/ui/associated-types/issue-22037.stderr
error[E0576]: cannot find associated type `X`
  --> $DIR/issue-22037.rs:3:33
   |
LL |     type Output;
   |     ------------ associated type `Output` defined here
LL |     fn a(&self) -> <Self as A>::X;
   |                                 ^
   |                                 |
   |                                 not found in trait `A`
   |                                 help: maybe you meant this associated type: `Output`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0576`.
